--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "rehype-prism-plus": "^1.4.2"
+    "rehype-prism-plus": "^1.4.2",
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
