--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@next/font": "^13.1.6",
     "@radix-ui/colors": "^0.1.8",
     "@stitches/react": "^1.2.8",
-    "esbuild": "^0.14.49",
-    "mdx-bundler": "^9.0.1",
+    "contentlayer": "^0.3.0",
+    "date-fns": "^2.29.3",
     "next": "13.1.6",
+    "next-contentlayer": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reading-time": "^1.5.0",
     "rehype-prism-plus": "^1.4.2",
+    "remark-gfm": "^3.0.1",
     "sharp": "^0.30.7"
   },
   "devDependencies": {
@@ -31,7 +34,7 @@
     "@typescript-eslint/parser": "^5.30.6",
     "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "12.2.2",
+    "eslint-config-next": "13.1.6",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.2.5",
     "eslint-plugin-import": "^2.26.0",
