--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -16,8 +20,12 @@
     "incremental": true,
     "baseUrl": "src",
     "paths": {
-      "@/*": ["./*"],
-      "@contentlayer/*": ["../.contentlayer/*"]
+      "@/*": [
+        "./*"
+      ],
+      "@contentlayer/*": [
+        "../.contentlayer/*"
+      ]
     }
   },
   "include": [
@@ -26,5 +34,7 @@
     "**/*.tsx",
     ".contentlayer/generated"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
