--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/font": "^13.1.6",
     "@radix-ui/colors": "^0.1.8",
     "@stitches/react": "^1.2.8",
+    "@vercel/og": "^0.2.0",
     "contentlayer": "^0.3.0",
     "date-fns": "^2.29.3",
     "next": "13.1.6",
