--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@next/font": "^13.1.6",
-    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-dialog": "^1.0.2",
     "@stitches/react": "^1.2.8",
     "@vercel/og": "^0.2.0",
     "contentlayer": "^0.3.0",
