--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only --build-arg CLOUDINARY_URL=$CLOUDINARY_URL
+      - run: flyctl deploy --remote-only --build-arg CLOUDINARY_URL=${{ env.CLOUDINARY_URL }}
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-          CLOUDINARY_URL: ${{ env.CLOUDINARY_URL }}
