--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "astro": "^4.15.7",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
+    "lenis": "^1.1.14",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -29,9 +30,6 @@
     "typescript": "^5.6.2"
   },
   "devDependencies": {
-    "eslint": "^9.10.0",
-    "eslint-plugin-astro": "^1.2.4",
-    "prettier": "^3.3.3",
-    "prettier-plugin-astro": "^0.14.1"
+    "@biomejs/biome": "1.9.4"
   }
 }
