--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^5.6.2"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4"
+    "@biomejs/biome": "1.9.4",
+    "@tailwindcss/typography": "^0.5.15"
   }
 }
