--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "",
+  "name": "alfanjauhari.com",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "bunx --bun astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "bunx --bun astro check && bunx --bun astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^3.1.6",
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.1",
+    "@astrojs/vercel": "^7.8.2",
     "@codesandbox/sandpack-react": "^2.19.9",
     "@codesandbox/sandpack-themes": "^2.0.21",
     "@fontsource-variable/dm-sans": "^5.1.0",
