--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fontsource/anton": "^5.1.0",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
+    "@vercel/og": "^0.6.3",
     "astro": "^4.15.7",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
