feat: upgrade astro v5

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,6 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src/**/*"]
+  "include": [".astro/types.d.ts", "**/*"],
+  "exclude": ["dist"]
 }
