--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.3",
-    "@astrojs/mdx": "^3.1.6",
-    "@astrojs/react": "^3.6.2",
-    "@astrojs/tailwind": "^5.1.1",
-    "@astrojs/vercel": "^7.8.2",
+    "@astrojs/check": "0.9.4",
+    "@astrojs/mdx": "4.3.0",
+    "@astrojs/react": "4.3.0",
+    "@astrojs/tailwind": "6.0.2",
+    "@astrojs/vercel": "8.1.5",
     "@codesandbox/sandpack-react": "^2.19.9",
     "@codesandbox/sandpack-themes": "^2.0.21",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
     "@vercel/og": "^0.6.3",
-    "astro": "^4.15.7",
+    "astro": "5.9.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
     "lenis": "^1.1.14",
