--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "bunx --bun astro dev",
     "build": "bunx --bun astro build",
     "check": "bunx --bun astro check",
-    "preview": "bunx --bun astro preview"
+    "preview": "bunx --bun astro preview",
+    "db:migrate": "bun ./db/migrate.ts",
+    "db:seed": "bun ./db/seed.ts"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
@@ -17,23 +19,27 @@
     "@astrojs/vercel": "8.1.5",
     "@codesandbox/sandpack-react": "^2.19.9",
     "@codesandbox/sandpack-themes": "^2.0.21",
+    "@notionhq/client": "^3.1.3",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
     "@vercel/og": "^0.6.3",
+    "ajv": "^8.17.1",
     "astro": "5.9.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
     "lenis": "^1.1.14",
     "lucide-react": "^0.441.0",
+    "notion-to-md": "^4.0.0-alpha.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.12",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "umzug": "^3.8.2"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/bun": "^1.1.12"
+    "@types/bun": "^1.2.16"
   }
 }
