--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "4.3.0",
+    "@astrojs/node": "^9.2.2",
     "@astrojs/react": "4.3.0",
     "@astrojs/tailwind": "6.0.2",
     "@astrojs/vercel": "8.1.5",
