--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,50 @@
-version: '3.8'
 services:
-  pg:
-    container_name: alfanjauhari-com-db
+  alfanjauhari_com_db:
+    container_name: alfanjauhari_com_db
     build: ./db
     environment:
-      POSTGRES_DB: alfanjauhari-com
-      POSTGRES_USER: alfanjauhari
-      POSTGRES_PASSWORD: alfanjauhari
+      POSTGRES_DB: ${DB_NAME:-alfanjauhari-com}
+      POSTGRES_USER: ${DB_USER:-alfanjauhari}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-alfanjauhari}
     volumes:
       - pg_data:/var/lib/postgresql/data
     ports:
       - ${DB_PORT:-5432}:5432
     shm_size: '512mb'
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U alfanjauhari -d alfanjauhari-com"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-alfanjauhari} -d ${DB_NAME:-alfanjauhari-com}"]
       interval: 30s
       timeout: 20s
       retries: 3
 
-  app:
-    container_name: alfanjauhari-com-app
+  alfanjauhari_com_app:
+    container_name: alfanjauhari_com_app
     build:
       context: .
       secrets:
         - DATABASE_URL
-    env_file: .env
+    environment:
+      DATABASE_URL: $DATABASE_URL
+      NOTION_ACCESS_TOKEN: $NOTION_ACCESS_TOKEN
     depends_on:
-      - pg
+      - alfanjauhari_com_db
     ports:
-      - ${APP_PORT:-4321}:4321
+      - :4321
     volumes:
       - app_data:/usr/src/app
+    labels:
+      - "traefik.http.routers.app.rule=Host(`alfanjauhari.com`)"
+
+  traefik:
+    image: traefik:v3.4
+    command:
+      - "--providers.docker=true"
+      - "--entrypoints.web.address=:80"
+    ports:
+      - "80:80"
+      - "8080:8080"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
 
 volumes:
   pg_data:
