--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@codesandbox/sandpack-react": "^2.19.9",
     "@codesandbox/sandpack-themes": "^2.0.21",
     "@notionhq/client": "^3.1.3",
+    "@tailwindcss/vite": "^4.1.10",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
     "@vercel/og": "^0.6.3",
@@ -34,7 +35,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss": "^3.4.12",
+    "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3",
     "umzug": "^3.8.2"
   },
