--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
     environment:
       DATABASE_URL: $DATABASE_URL
       NOTION_ACCESS_TOKEN: $NOTION_ACCESS_TOKEN
+      TRAEFIK_URL: ${TRAEFIK_URL:-alfanjauhari.localhost}
     depends_on:
       - alfanjauhari_com_db
     ports:
@@ -33,15 +34,25 @@ services:
     volumes:
       - app_data:/usr/src/app
     labels:
-      - "traefik.http.routers.app.rule=Host(`alfanjauhari.com`)"
+      - "traefik.http.routers.app.rule=Host(`${TRAEFIK_URL}`)"
+      - "traefik.http.routers.app.tls.certresolver=default"
+      - "traefik.http.routers.app.tls=true"
 
-  traefik:
+  alfanjauhari_com_traefik:
     image: traefik:v3.4
+    container_name: alfanjauhari_com_traefik
+    environment:
+      TRAEFIK_SSL_EMAIL: ${TRAEFIK_SSL_EMAIL:-hi@alfanjauhari.com}
     command:
       - "--providers.docker=true"
-      - "--entrypoints.web.address=:80"
+      - "--entrypoints.app.address=:80"
+      - "--entrypoints.appsecure.address=:443"
+      - "--certificatesresolvers.default.acme.email=${TRAEFIK_SSL_EMAIL}"
+      - "--certificatesresolvers.default.acme.storage=acme.json"
+      - "--certificatesresolvers.default.acme.httpchallenge.entrypoint=app"
     ports:
       - "80:80"
+      - "443:443"
       - "8080:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
