--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,6 @@ jobs:
     steps:
       - name: Execute SSH command
         env:
-          FOLDER: ${{ secrets.SERVER_FOLDER }}
           BUILD_DATABASE_URL: ${{ secrets.BUILD_DATABASE_URL }}
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           DB_NAME: ${{ secrets.DB_NAME }}
@@ -28,6 +27,6 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            git -C pull $FOLDER || https://github.com/alfanjauhari/alfanjauhari.com $FOLDER
+            git -C pull alfanjauhari.com || https://github.com/alfanjauhari/alfanjauhari.com
             cd $FOLDER
             docker compose -d --build
