--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT }}
+          envs: BUILD_DATABASE_URL,DATABASE_URL,DB_NAME,DB_USER,NOTION_ACCESS_TOKEN,TRAEFIK_SSL_EMAIL,TRAEFIK_URL
           script: |
             git -C pull alfanjauhari.com || git clone https://github.com/alfanjauhari/alfanjauhari.com alfanjauhari.com
             cd alfanjauhari.com
