--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     volumes:
       - pg_data:/var/lib/postgresql/data
     ports:
-      - :5432
+      - ${DB_PORT}:5432
     shm_size: '512mb'
     networks:
       - default
