--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@astrojs/node": "^9.2.2",
     "@astrojs/react": "4.3.0",
     "@astrojs/tailwind": "6.0.2",
-    "@astrojs/vercel": "8.2.0",
+    "@astrojs/vercel": "^8.2.0",
     "@codesandbox/sandpack-react": "^2.19.9",
     "@codesandbox/sandpack-themes": "^2.0.21",
     "@notionhq/client": "^3.1.3",
