--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "4.3.0",
-    "@astrojs/node": "^9.2.2",
     "@astrojs/react": "4.3.0",
     "@astrojs/tailwind": "6.0.2",
     "@astrojs/vercel": "^8.2.0",
@@ -26,13 +25,13 @@
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
     "@vercel/og": "^0.6.3",
-    "ajv": "^8.17.1",
     "astro": "5.10.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
     "lenis": "^1.1.14",
     "lucide-react": "^0.441.0",
     "notion-to-md": "^4.0.0-alpha.5",
+    "postgres": "^3.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.2",
