feat: separate payload files

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -5,6 +5,7 @@
     "jsxImportSource": "react",
     "baseUrl": ".",
     "paths": {
+      "@payload-config": ["./payload-config.ts"],
       "@/*": ["src/*"]
     }
   },
