--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,38 +8,36 @@
     "build": "bunx --bun astro build",
     "check": "bunx --bun astro check",
     "preview": "bunx --bun astro preview",
-    "db:migrate": "bun ./db/migrate.ts",
-    "db:seed": "bun ./db/seed.ts"
+    "clean": "rm -rf node_modules bun.lock .astro .turbo payload-types.ts",
+    "generate-types": "payload generate:types"
   },
   "dependencies": {
+    "@alfanjauhari-com/payload": "workspace:*",
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "4.3.0",
+    "@astrojs/mdx": "4.3.1",
     "@astrojs/react": "4.3.0",
     "@astrojs/tailwind": "6.0.2",
-    "@astrojs/vercel": "^8.2.0",
+    "@astrojs/vercel": "8.2.3",
     "@codesandbox/sandpack-react": "^2.19.9",
     "@codesandbox/sandpack-themes": "^2.0.21",
-    "@notionhq/client": "^3.1.3",
-    "@tailwindcss/vite": "^4.1.10",
-    "@types/react": "^18.3.7",
-    "@types/react-dom": "^18.3.0",
     "@vercel/og": "^0.6.3",
-    "astro": "5.10.1",
+    "astro": "5.12.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
     "lenis": "^1.1.14",
     "lucide-react": "^0.441.0",
-    "notion-to-md": "^4.0.0-alpha.5",
-    "postgres": "^3.4.7",
+    "payload": "^3.48.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss": "^4.1.10",
-    "typescript": "^5.8.3",
-    "umzug": "^3.8.2"
+    "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
-    "@types/bun": "^1.2.16"
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/bun": "^1.2.16",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "typescript": "^5.8.3"
   }
 }
