--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
+    "clean": "turbo run clean",
+    "generate-types": "turbo run generate-types",
     "prepare": "husky"
   },
   "type": "module",
