--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,7 @@
   "$schema": "https://turborepo.com/schema.json",
   "tasks": {
     "build": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["generate-types", "^build"],
       "outputs": ["dist/**", ".next/**"],
       "env": [
         "NODE_ENV",
