chore(turbo): change turbo repo config envar for generate types

--- a/turbo.json
+++ b/turbo.json
@@ -20,7 +20,8 @@
       "cache": false
     },
     "generate-types": {
-      "outputs": ["payload-types.ts"]
+      "outputs": ["payload-types.ts"],
+      "env": ["NODE_ENV", "DATABASE_URL", "PAYLOAD_SECRET"]
     }
   }
 }
