--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -24,7 +24,8 @@
     "dev": "next dev",
     "build": "next build",
     "generate-types": "rm -rf src/generated/payload-types.ts && payload generate:db-schema && payload generate:types",
-    "clean": "rm -rf node_modules bun.lock .next .turbo payload-types.ts"
+    "clean": "rm -rf node_modules bun.lock .next .turbo payload-types.ts",
+    "start": "next start"
   },
   "type": "module"
 }
