--- a/turbo.json
+++ b/turbo.json
@@ -36,13 +36,18 @@
       "outputs": ["src/generated/payload-types.ts"],
       "env": [
         "NODE_ENV",
-        "DATABASE_URL",
+        "API_URL",
         "PAYLOAD_SECRET",
+        "DATABASE_URL",
+        "RESEND_API_KEY",
+        "PUBLIC_PAYLOAD_API_URL",
         "BETTER_AUTH_SECRET",
         "GITHUB_CLIENT_ID",
         "GITHUB_CLIENT_SECRET",
         "GOOGLE_CLIENT_ID",
-        "GOOGLE_CLIENT_SECRET"
+        "GOOGLE_CLIENT_SECRET",
+        "APP_URL",
+        "BETTER_AUTH_URL"
       ],
       "inputs": ["$TURBO_DEFAULT$", ".env"]
     }
