feat: add sentry

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,1 +1,6 @@
-PUBLIC_PAYLOAD_API_URL=http://127.0.0.1:4321/api
+PUBLIC_PAYLOAD_API_URL=http://127.0.0.1:3000
+
+PUBLIC_SITE_URL=http://localhost:4321
+
+SENTRY_AUTH_TOKEN=
+SENTRY_DSN=
