--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "@astrojs/vercel": "8.2.3",
     "@codesandbox/sandpack-react": "^2.19.9",
     "@codesandbox/sandpack-themes": "^2.0.21",
+    "@sentry/astro": "^9.42.1",
     "@vercel/og": "^0.6.3",
     "astro": "5.12.3",
     "better-auth": "1.3.4",
