--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,6 +6,7 @@
     "@payloadcms/email-resend": "^3.49.0",
     "@payloadcms/next": "^3.48.0",
     "@payloadcms/richtext-lexical": "^3.48.0",
+    "@sentry/nextjs": "^9.42.1",
     "better-auth": "1.3.4",
     "graphql": "^16.11.0",
     "next": "^15.4.2",
