fix: add turbo env sentry

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,9 +1,20 @@
+API_URL=
+
 PAYLOAD_SECRET=
 
 DATABASE_URL=
 
 RESEND_API_KEY=
 
-APP_URL="http://127.0.0.1:4321"
+APP_URL=
 
-AUTH_SECRET=
+BETTER_AUTH_SECRET=
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+SENTRY_DSN=
+SENTRY_AUTH_TOKEN=
