--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "@astrojs/vercel": "8.2.3",
     "@codesandbox/sandpack-react": "^2.19.9",
     "@codesandbox/sandpack-themes": "^2.0.21",
+    "@radix-ui/react-checkbox": "1.3.2",
     "@sentry/astro": "^9.42.1",
     "@vercel/og": "^0.6.3",
     "astro": "5.12.3",
@@ -26,6 +27,7 @@
     "cookie": "^1.0.2",
     "framer-motion": "^11.5.4",
     "lenis": "^1.1.14",
+    "lucide-react": "0.534.0",
     "payload": "^3.48.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
