--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -2,5 +2,7 @@ PUBLIC_PAYLOAD_API_URL=http://127.0.0.1:3000
 
 PUBLIC_SITE_URL=http://localhost:4321
 
+PUBLIC_CDN_URL=
+
 SENTRY_AUTH_TOKEN=
 SENTRY_DSN=
