--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,8 @@
     "@astrojs/vercel": "8.2.3",
     "@codesandbox/sandpack-react": "^2.19.9",
     "@codesandbox/sandpack-themes": "^2.0.21",
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-checkbox": "1.3.2",
     "@sentry/astro": "^9.42.1",
     "@vercel/og": "^0.6.3",
@@ -31,6 +33,7 @@
     "payload": "^3.48.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "7.61.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^4.1.10"
   },
