feat: add create first user logic

--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,12 @@
 {
   "$schema": "https://turborepo.com/schema.json",
   "tasks": {
+    "start": {
+      "dependsOn": ["^start"],
+      "persistent": true,
+      "cache": false,
+      "inputs": ["$TURBO_DEFAULT$", ".env"]
+    },
     "build": {
       "dependsOn": ["generate-types", "^build"],
       "env": [
