--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "scripts": {
     "dev": "turbo watch dev",
+    "start": "turbo run start",
     "build": "turbo run build",
     "clean": "turbo run clean",
     "generate-types": "turbo run generate-types",
