--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -18,3 +18,11 @@ GOOGLE_CLIENT_SECRET=
 
 SENTRY_DSN=
 SENTRY_AUTH_TOKEN=
+
+WEBHOOK_SECRET=
+
+S3_BUCKET_NAME=
+S3_ENDPOINT=
+S3_ACCESS_KEY=
+S3_SECRET_ACCESS_KEY=
+S3_REGION=
