--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,15 +2,16 @@
   "name": "@alfanjauhari-com/api",
   "version": "1.0.0",
   "dependencies": {
-    "@payloadcms/db-postgres": "^3.48.0",
-    "@payloadcms/email-resend": "^3.49.0",
-    "@payloadcms/next": "^3.48.0",
-    "@payloadcms/richtext-lexical": "^3.48.0",
+    "@payloadcms/db-postgres": "3.49.0",
+    "@payloadcms/email-resend": "3.49.0",
+    "@payloadcms/next": "3.49.0",
+    "@payloadcms/richtext-lexical": "3.49.0",
+    "@payloadcms/storage-s3": "3.49.0",
     "@sentry/nextjs": "^9.42.1",
     "better-auth": "1.3.4",
     "graphql": "^16.11.0",
     "next": "^15.4.2",
-    "payload": "^3.48.0",
+    "payload": "3.49.0",
     "pg": "^8.16.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -23,5 +24,8 @@
     "clean": "rm -rf node_modules bun.lock .next .turbo payload-types.ts",
     "start": "next start"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@octokit/webhooks-types": "^7.6.1"
+  }
 }
