--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "@alfanjauhari-com/web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codesandbox/sandpack-react": "^2.20.0",
+    "@codesandbox/sandpack-themes": "^2.0.21",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.4.6",
     "@t3-oss/env-nextjs": "^0.13.8",
     "better-auth": "1.3.6",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "rehype-pretty-code": "^0.14.1",
+    "rehype-slug": "^6.0.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.17"
   },
