--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,4 +1,4 @@
-PUBLIC_PAYLOAD_API_URL=http://127.0.0.1:3000
+PUBLIC_PAYLOAD_API_URL=http://localhost:3000
 
 PUBLIC_SITE_URL=http://localhost:4321
 
