--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "zod": "^4.0.17"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.2.0",
     "@content-collections/core": "^0.10.0",
     "@content-collections/mdx": "^0.2.2",
     "@content-collections/next": "^0.2.6",
