--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "graphql": "^16.11.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.539.0",
-    "next": "^15.4.2-canary.50",
+    "next": "^15.4.6",
     "payload": "^3.52.0",
     "pg": "^8.16.3",
     "react": "19.1.0",
