feat: add dockerfile

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,5 +27,6 @@
   "type": "module",
   "devDependencies": {
     "@octokit/webhooks-types": "^7.6.1"
-  }
+  },
+  "packageManager": "bun@1.2.19"
 }
