--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "4.3.1",
+    "@astrojs/partytown": "^2.1.4",
     "@astrojs/react": "4.3.0",
     "@astrojs/tailwind": "6.0.2",
     "@astrojs/vercel": "8.2.3",
@@ -26,7 +27,6 @@
     "astro": "5.12.8",
     "better-auth": "1.3.4",
     "clsx": "^2.1.1",
-    "cookie": "^1.0.2",
     "framer-motion": "^11.5.4",
     "lenis": "^1.1.14",
     "lucide-react": "0.534.0",
