feat: add compose profile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   alfanjauhari_com_db:
     profiles:
       - db
+      - dev
     container_name: alfanjauhari_com_db
     build: postgres:17
     environment:
@@ -25,8 +26,10 @@ services:
       timeout: 20s
       retries: 3
 
-  alfanjauhari_com_app:
-    container_name: alfanjauhari_com_app
+  alfanjauhari_com_app_dev:
+    profiles:
+      - dev
+    container_name: alfanjauhari_com_app_dev
     build:
       context: .
       secrets:
@@ -35,7 +38,7 @@ services:
       args:
         NEXT_PUBLIC_SITE_URL: $NEXT_PUBLIC_SITE_URL
         NEXT_PUBLIC_CDN_URL: $NEXT_PUBLIC_CDN_URL
-    env_file: $RUNTIME_ENV_FILE
+    env_file: ${RUNTIME_ENV_FILE:-.env}
     ports:
       - :3000
     volumes:
@@ -48,11 +51,27 @@ services:
       - "traefik.http.routers.app.entrypoints=app,appsecure"
       - "traefik.http.routers.app.tls.certresolver=letsencrypt"
 
+  alfanjauhari_com_app:
+    profiles:
+      - prod
+    image: alfanjauhari/alfanjauhari-com
+    env_file: $RUNTIME_ENV_FILE
+    ports:
+      - :3000
+    volumes:
+      - app_data:/usr/src/app
+    networks:
+      - default
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.app.rule=Host(`$TRAEFIK_URL`) || Host(`www.$TRAEFIK_URL`)"
+      - "traefik.http.routers.app.entrypoints=app,appsecure"
+      - "traefik.http.routers.app.tls.certresolver=letsencrypt"
+
   alfanjauhari_com_traefik:
     image: traefik:v3.4
     container_name: alfanjauhari_com_traefik
-    environment:
-      TRAEFIK_SSL_EMAIL: ${TRAEFIK_SSL_EMAIL:-hi@alfanjauhari.com}
+    env_file: $RUNTIME_ENV_FILE
     command:
       - "--log.level=DEBUG"
       - "--providers.docker=true"
